--- a/src/assets/styles.css
+++ b/src/assets/styles.css
@@ -3,11 +3,9 @@
 body {
   display: flex;
   justify-content: center;
-  background-color: #0cbaba;
-  background-image: linear-gradient(315deg, #0cbaba 0%, #380036 74%);
   height: 100vw;
 }
 
 #root {
-  width: 700px;
+  width: 95%;
 }
